--- a/src/AMXMain.html
+++ b/src/AMXMain.html
@@ -5,7 +5,7 @@
 		<link rel="stylesheet" type="text/css" href="mainLayout.css">
 		<link rel="stylesheet" type="text/css" href="projectorLayout.css">
 		<title>Main</title>
-		<script src="/jquery-1.11.0.min.js"></script>
+		<script src="jquery-1.11.0.min.js"></script>
 		<script src="mainHelper.js"></script>
 	</head>
 	
