--- a/src/lights/lightsClient.html
+++ b/src/lights/lightsClient.html
@@ -2,40 +2,41 @@
 <html>
 <head>
 	<title>base lights page</title>
-	<script src="../jquery-1.11.0.min"></script>
-	<script src="../jquery.mobile-1.4.2/jquery.mobile-1.4.2.min"></script>
-	<!--<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.2/jquery.mobile-1.4.2.min.css" />-->
-	<link rel="stylesheet" type="text/css" href="lights.css" />
+	<script src="../jquery-1.11.0.min.js"></script>
+	<script src="../jquery.mobile-1.4.2/jquery.mobile-1.4.2.min.js"></script>
+	<link rel="stylesheet" href="../jquery.mobile-1.4.2/jquery.mobile-1.4.2.min.css" />
+	<!--<link rel="stylesheet" type="text/css" href="lights.css" />-->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 
 <body>
-	<div data-role="page">
+	<div data-role="page" id="lightsPage" >
 		<div data-role="header">
 			<h1>Light Page</h1>
 		</div>
 		<div role="main" class="ui-content">
 		<div class="rightSide">
-			<div id="standardPresets" >
+			<div id="standardPresets" data-role="controlgroup" data-type="vertical" >
 				<h2>Standard Presets</h2>
-				<button type="button" id="brightRoom">Bright Room</button>
-				<button type="button" id="mediumRoom">Medium Room</button>
-				<button type="button" id="projectionPreset">Projection Preset</button>
+				<button type="button" id="brightRoom" class="ui-btn-b">Bright Room</button>
+				<button type="button" id="mediumRoom" class="ui-btn-b">Medium Room</button>
+				<button type="button" id="projectionPreset" class="ui-btn-b">Projection Preset</button>
 			</div>
-			<div id="addOnPresets">
+			<div id="addOnPresets" data-role="controlgroup" data-type="vertical">
 				<h2>Add On Presets</h2>
-				<button type="button" id="wallCamsOnOff">Wall Cams On/Off</button>
-				<button type="button" id="boardFluoroOnOff">Board Fluoro On/Off</button>
-				<button type="button" id="roomFluoroOnOff">Room Fluoro On/Off</button>
-				<button type="button" id="podiumOnOff">Podium On/Off</button>
+				<button type="button" id="wallCamsOnOff" class="ui-btn-c">Wall Cams On/Off</button>
+				<button type="button" id="boardFluoroOnOff" class="ui-btn-c">Board Fluoro On/Off</button>
+				<button type="button" id="roomFluoroOnOff" class="ui-btn-c">Room Fluoro On/Off</button>
+				<button type="button" id="podiumOnOff" class="ui-btn-c">Podium On/Off</button>
 			</div>
 		</div>
-		<div class="leftSide">
+		<div class="leftSide" data-role="controlgroup" data-type="vertical">
 			<div id="sideBar">
-				<button type="button" id="allOn">All On</button>
-				<button type="button" id="nightLight">Night Light</button>
-				<button type="button" id="allOff">All Off</button>
+				<h2>Other Presets</h2>
+				<button type="button" id="allOn" class="ui-btn">All On</button>
+				<button type="button" id="nightLight" class="ui-btn">Night Light</button>
+				<button type="button" id="allOff" class="ui-btn">All Off</button>
 			</div>
 		</div>
 		</div>
