Messing with php
Changed how style sheet for embedded page works. .done and .fail
functions

--- a/src/AMXMain.html
+++ b/src/AMXMain.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<link rel="stylesheet" type="text/css" href="mainLayout.css">
-		<link rel="stylesheet" type="text/css" href="projectorLayout.css">
+		<link id="containerStyle" rel="stylesheet" type="text/css" href="mainLayout.css">
 		<title>Main</title>
 		<script src="jquery-1.11.0.min.js"></script>
 		<script src="mainHelper.js"></script>
