--- a/src/projector/projector.html
+++ b/src/projector/projector.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Main</title>
+		<link rel="stylesheet" type="text/css" href="./projectorLayout.css" />
 	</head>
 	
 	<body>
